<resources>
    <string name="app_name">JournalApp</string>
    <string name="add_entry">Add a new entry</string>
    <string name="title_label">Title</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="save_label">Save</string>
    <string name="to">To</string>
    <string name="record_entry">Record Entry</string>
    <string name="info">Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>