<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_entry_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gpimage">

  <EditText
      android:id="@+id/edit_title"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="12dp"
      android:layout_marginEnd="8dp"
      android:autofillHints="@string/title_label"
      android:ems="10"
      android:fontFamily="@font/spgrregular"
      android:hint="@string/title_label"
      android:inputType="text"
      android:minHeight="48dp"
      android:textAlignment="center"
      android:textColor="@color/darkBlue"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/record_entry" />

  <TextView
      android:id="@+id/record_entry"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="80dp"
      android:fontFamily="@font/spgrlight"
      android:text="@string/record_entry"
      android:textColor="@color/darkBlue"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.532"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/btn_end_time"
      style="?android:buttonBarButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="12dp"
      android:layout_marginTop="96dp"
      android:fontFamily="@font/spgrbold"
      android:text="@string/end_time"
      android:textColor="@color/lighterdarkBlue"
      app:layout_constraintStart_toEndOf="@+id/btn_save"
      app:layout_constraintTop_toBottomOf="@+id/edit_title" />

  <Button
      android:id="@+id/btn_start_time"
      style="?android:buttonBarButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="48dp"
      android:layout_marginTop="96dp"
      android:fontFamily="@font/spgrbold"
      android:text="@string/start_time"
      android:textColor="@color/lighterdarkBlue"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_title" />

  <Button
      android:id="@+id/btn_entry_date"
      style="?android:buttonBarButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="48dp"
      android:fontFamily="@font/spgrbold"
      android:text="@string/date"
      android:textColor="@color/lighterdarkBlue"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.482"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_title" />

  <Button
      android:id="@+id/btn_save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:backgroundTint="@color/bluishdarker"
      android:elevation="25dp"
      android:fontFamily="@font/spgrbold"
      android:text="@string/save_label"
      android:textColor="@color/bluish"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/spgrregular"
      android:text="@string/to"
      android:textColor="@color/darkBlue"
      app:layout_constraintBottom_toBottomOf="@+id/btn_start_time"
      app:layout_constraintEnd_toStartOf="@+id/btn_end_time"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/btn_start_time"
      app:layout_constraintTop_toTopOf="@+id/btn_start_time"
      app:layout_constraintVertical_bias="0.678" />

</androidx.constraintlayout.widget.ConstraintLayout>